--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,7 +4,9 @@
 
 .main {
   min-height: calc(100vh - 83px);
+  max-width: 600px;
   padding: 4rem 0;
+  margin: 0 auto;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -36,7 +38,7 @@
 }
 
 .fileChooser {
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .fileInfo {
@@ -58,6 +60,7 @@
 
 .note {
   font-size: 12px;
+  margin-top: 1.5rem;
 }
 
 @media (max-width: 600px) {
