Moved all credits to the footer

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,12 +15,10 @@
 }
 
 .footer {
-  display: flex;
-  flex: 1;
   padding: 2rem 0;
   border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
+  line-height: 1.5rem;
 }
 
 .title {
