--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -35,10 +35,6 @@
   max-width: 800px;
 }
 
-.fileChooser {
-  margin-top: 1rem;
-}
-
 .fileInfo {
   margin-top: 1rem;
 }
@@ -73,4 +69,28 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.fileInput::-webkit-file-upload-button {
+  visibility: hidden;
+}
+.fileButton {
+  display: inline-block;
+  background: linear-gradient(to top, #e3e3e3, #f9f9f9);
+  border: 1px solid #999;
+  border-radius: 3px;
+  padding: 5px 8px;
+  outline: none;
+  white-space: nowrap;
+  user-select: none;
+  cursor: pointer;
+  text-shadow: 1px 1px #fff;
+  font-weight: 700;
+  font-size: 10pt;
+}
+.fileButton:hover {
+  border-color: black;
+}
+.fileButton:active {
+  background: linear-gradient(to top, #f9f9f9, #e3e3e3);
 }
