--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -76,6 +76,7 @@
 }
 .fileButton {
   display: inline-block;
+  margin-top: 1rem;
   background: linear-gradient(to top, #e3e3e3, #f9f9f9);
   border: 1px solid #999;
   border-radius: 3px;
