--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -35,8 +35,15 @@
   max-width: 800px;
 }
 
-.fileInfo {
+.resultsContainer {
+  width: 100%;
   margin-top: 1rem;
+  padding-top: 1rem;
+  border-top: solid 1px;
+}
+
+.resultsTitle {
+  font-weight: bold;
 }
 
 .errorOutput {
